fix: broken layout on mobile

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -23,7 +23,7 @@
   border-left: none;
   font-size: 1em;
   flex: 1;
-  min-width: 200px;
+  min-width: 180px;
 }
 
 .input:focus {
